# FastAPI_YouTube_Video_Real_Time_Analytics_Tracker

./: .env.compose  Dockerfile  docker-compose.yml  pylock.toml  pyproject.toml  requirements.txt
boot/: docker-run.sh
src/: main.py
src/api/common/: models.py
src/api/videos_events/: models.py  routing.py
