[project]
name = "FastAPI_YouTube_Video_Real_Time_Analytics_Tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.1.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.7",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "timescaledb>=0.0.4",
    "uvicorn>=0.34.2",
]
